New Product funcitonality added

--- a/src/client/styles/containers/newProduct.scss
+++ b/src/client/styles/containers/newProduct.scss
@@ -17,6 +17,9 @@
         height: 100px;
       }
     }
+    .error {
+      color: #ff0000;
+    }
   }
   .formButton {
     background: #cc4d29;
