--- a/src/client/styles/components/product.scss
+++ b/src/client/styles/components/product.scss
@@ -10,7 +10,8 @@
     justify-content: center;
     align-items: center;
     img {
-      width: 70%;
+      width: 100px;
+      height: 100px;
     }
   }
   .productBody {
