--- a/src/client/styles/components/product.scss
+++ b/src/client/styles/components/product.scss
@@ -1,9 +1,14 @@
 .productCard {
   display: flex;
+  flex-direction: row;
   border-bottom: 1px solid #e8e8e8;
   background: #f9f9f9;
   border-radius: 5px;
   height: 130px;
+  @media only screen and (max-width: 600px) {
+    flex-direction: column;
+    height: 375px;
+  }
   .productImage {
     width: 20%;
     display: flex;
@@ -13,12 +18,24 @@
       width: 100px;
       height: 100px;
     }
+    @media only screen and (max-width: 600px) {
+      width: 100%;
+      padding: 20px 0;
+      img {
+        width: 200px;
+        height: 200px;
+      }
+    }
   }
   .productBody {
     width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    @media only screen and (max-width: 600px) {
+      width: 90%;
+      margin: 0 5%;
+    }
     .productName {
       font-size: 16px;
       font-weight: 600;
@@ -41,6 +58,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    @media only screen and (max-width: 600px) {
+      width: 100%;
+      padding-top: 20px;
+    }
     .productDateText {
       font-size: 14px;
       font-weight: 400;
