--- a/src/client/styles/containers/newProduct.scss
+++ b/src/client/styles/containers/newProduct.scss
@@ -1,5 +1,8 @@
 .formContainer {
   padding: 10px 20%;
+  @media only screen and (max-width: 600px) {
+    padding: 10px 0;
+  }
   fieldset {
     margin-bottom: 50px;
     .formDiv {
@@ -7,11 +10,21 @@
       flex-direction: row;
       margin-bottom: 30px;
       margin-top: 20px;
+      @media only screen and (max-width: 600px) {
+        flex-direction: column;
+      }
       label {
         width: 30%;
+        @media only screen and (max-width: 600px) {
+          padding-bottom: 20px;
+          width: 100%;
+        }
       }
       input, textarea {
         width: 70%;
+        @media only screen and (max-width: 600px) {
+          width: 100%;
+        }
       }
       textarea {
         height: 100px;
